--- a/pages/templates/pages/creategeneralinfomodule.html
+++ b/pages/templates/pages/creategeneralinfomodule.html
@@ -3,83 +3,84 @@
 
 {% block content %}
 <section id="create-form">
-  <div class="row my-4">
-    <div class="col">
-        <h6 class="my-0"><small class="text-uppercase text-secondary font-weight-light">creating page</small></h6>
-        {% if page.title %}
-          <h1>{{page.title}}</h1>
-        {% else %}
-          <h1 class="text-secondary">No Title</h1>
-        {% endif %}
-      </h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h2>General Information Module</h2>
-    </div>
-  </div>
-  <form action="" method="post">
-    <div class="row">
-      <div class="col-12 col-md-6">
-        {% csrf_token %}
-        {% if form.non_field_errors %}
-        <div class="alert alert-danger" role="alert">
-          <ul class="list-unstyled my-0">
-            {% for error in form.non_field_errors %}
-            <li> {{ error|escape }} </li>
-            {% endfor %}
-          </ul>
-        </div>
-        {% endif %}
-        <div class="form-group">
-          <label for="{{form.name.auto_id}}">
-            {{ form.name.label }}
-          </label>
-          {% if form.name.errors %}
-          {{ form.name|add_class:"form-control is-invalid" }}
-          <div class="invalid-feedback">
-            <ul class="list-unstyled">
-              {% for error in form.name.errors %}
-              <li><strong>{{ error|escape }}</strong></li>
-              {% endfor %}
-            </ul>
-          </div>
+  <div class="container">
+    <div class="row my-4">
+      <div class="col">
+          <h6 class="my-0"><small class="text-uppercase text-secondary font-weight-light">creating page</small></h6>
+          {% if page.title %}
+            <h1>{{page.title}}</h1>
           {% else %}
-          {{ form.name|add_class:"form-control" }}
+            <h1 class="text-secondary">No Title</h1>
           {% endif %}
-        </div>
-      </div>
-      <div class="col-12 col-md-6">
-        <div class="form-group">
-          <label for="{{form.identity.auto_id}}">
-            {{ form.identity.label }}
-          </label>
-          {% if form.identity.errors %}
-          {{ form.identity|add_class:"form-control is-invalid" }}
-          <div class="invalid-feedback">
-            <ul class="list-unstyled">
-              {% for error in form.identity.errors %}
-              <li><strong>{{ error|escape }}</strong></li>
-              {% endfor %}
-            </ul>
-          </div>
-          {% else %}
-          {{ form.identity|add_class:"form-control" }}
-          {% endif %}
-        </div>
+        </h1>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <a href={% url 'pages:addmodule' page.id %} class="btn btn-danger">Back</a>
-      </div>
-      <div class="col text-right">
-        <button type="submit" value="submit_add_more" class="btn btn-primary">Save</button>
-      </div>
+        <h2>General Information Module</h2>
       </div>
     </div>
-  </form>
-
+    <form action="" method="post">
+      <div class="row">
+        <div class="col-12 col-md-6">
+          {% csrf_token %}
+          {% if form.non_field_errors %}
+          <div class="alert alert-danger" role="alert">
+            <ul class="list-unstyled my-0">
+              {% for error in form.non_field_errors %}
+              <li> {{ error|escape }} </li>
+              {% endfor %}
+            </ul>
+          </div>
+          {% endif %}
+          <div class="form-group">
+            <label for="{{form.name.auto_id}}">
+              {{ form.name.label }}
+            </label>
+            {% if form.name.errors %}
+            {{ form.name|add_class:"form-control is-invalid" }}
+            <div class="invalid-feedback">
+              <ul class="list-unstyled">
+                {% for error in form.name.errors %}
+                <li><strong>{{ error|escape }}</strong></li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% else %}
+            {{ form.name|add_class:"form-control" }}
+            {% endif %}
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="form-group">
+            <label for="{{form.identity.auto_id}}">
+              {{ form.identity.label }}
+            </label>
+            {% if form.identity.errors %}
+            {{ form.identity|add_class:"form-control is-invalid" }}
+            <div class="invalid-feedback">
+              <ul class="list-unstyled">
+                {% for error in form.identity.errors %}
+                <li><strong>{{ error|escape }}</strong></li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% else %}
+            {{ form.identity|add_class:"form-control" }}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <a href={% url 'pages:addmodule' page.id %} class="btn btn-danger">Back</a>
+        </div>
+        <div class="col text-right">
+          <button type="submit" value="submit_add_more" class="btn btn-primary">Save</button>
+        </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </section>
 {% endblock content %}
