--- a/pages/templates/pages/createpage.html
+++ b/pages/templates/pages/createpage.html
@@ -3,89 +3,90 @@
 
 {% block content %}
 <section id="create-form">
-  <form action="" method="post">
-    {% csrf_token %}
-    <div class="row mt-4">
-      {% if form.non_field_errors %}
-      <div class="col-12">
-        <div class="alert alert-danger" role="alert">
-          <ul class="list-unstyled my-0">
-            {% for error in form.non_field_errors %}
-            <li> {{ error|escape }} </li>
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-      {% endif %}
-      <div class="col-12">
-        <div class="form-group">
-          <label for="{{form.title.auto_id}}" class="h4">
-            {{ form.title.label }}
-          </label>
-          {% if form.title.errors %}
-          {{ form.title|add_class:"form-control form-control-lg is-invalid" }}
-          <div class="invalid-feedback">
-            <ul class="list-unstyled">
-              {% for error in form.title.errors %}
-              <li><strong>{{ error|escape }}</strong></li>
-              {% endfor %}
-            </ul>
-          </div>
-          {% else %}
-          {{ form.title|add_class:"form-control form-control-lg" }}
-          {% endif %}
-        </div>
-      </div>
-    </div>
-    {% if modules %}
-      <div class="row my-3 justify-content-center">
+  <div class="container">
+    <form action="" method="post">
+      {% csrf_token %}
+      <div class="row mt-4">
+        {% if form.non_field_errors %}
         <div class="col-12">
-          <h4> You allready have the following modules: </h4>
-        </div>
-        <div class="col-11">
-            {% for category, moduleset in modules.items %}
-              {% for module in moduleset %}
-                {% if category == "generalinfomodule" %}
-                  {% include "pages/_generalinfo.html" %}
-                {% else %}
-                  <p>{{module}} </p>
-                {% endif %}
-              {% endfor %}
-            {% endfor %}
-        </div>
-      </div>
-    {% endif %}
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <label for="{{form.module.auto_id}}" class="h4">
-            {{ form.module.label }}
-          </label>
-          {% if form.module.errors %}
-          {{ form.module|add_class:"form-control form-control-lg is-invalid" }}
-          <div class="invalid-feedback">
-            <ul class="list-unstyled">
-              {% for error in form.module.errors %}
-              <li><strong>{{ error|escape }}</strong></li>
+          <div class="alert alert-danger" role="alert">
+            <ul class="list-unstyled my-0">
+              {% for error in form.non_field_errors %}
+              <li> {{ error|escape }} </li>
               {% endfor %}
             </ul>
           </div>
-          {% else %}
-          {{ form.module|attr:"aria-describedby:module-help"|add_class:"form-control form-control-lg" }}
-          <p id="module-help" class="form-text text-muted">
-            {{ form.module.help_text }}
-          </p>
-          {% endif %}
         </div>
-        <div class="text-right">
-          <button type="submit" value="submit_module" class="btn btn-lg btn-primary"> Create module </button>
-          {% if modules %}
-              <button type="submit" value="submit_next" class="btn btn-lg btn-success"> Next step: Arrange modules </button>
-          {% endif %}
+        {% endif %}
+        <div class="col-12">
+          <div class="form-group">
+            <label for="{{form.title.auto_id}}" class="h4">
+              {{ form.title.label }}
+            </label>
+            {% if form.title.errors %}
+            {{ form.title|add_class:"form-control form-control-lg is-invalid" }}
+            <div class="invalid-feedback">
+              <ul class="list-unstyled">
+                {% for error in form.title.errors %}
+                <li><strong>{{ error|escape }}</strong></li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% else %}
+            {{ form.title|add_class:"form-control form-control-lg" }}
+            {% endif %}
+          </div>
         </div>
       </div>
-    </div>
-  </form>
-
+      {% if modules %}
+        <div class="row my-3 justify-content-center">
+          <div class="col-12">
+            <h4> You allready have the following modules: </h4>
+          </div>
+          <div class="col-11">
+              {% for category, moduleset in modules.items %}
+                {% for module in moduleset %}
+                  {% if category == "generalinfomodule" %}
+                    {% include "pages/_generalinfo.html" %}
+                  {% else %}
+                    <p>{{module}} </p>
+                  {% endif %}
+                {% endfor %}
+              {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="{{form.module.auto_id}}" class="h4">
+              {{ form.module.label }}
+            </label>
+            {% if form.module.errors %}
+            {{ form.module|add_class:"form-control form-control-lg is-invalid" }}
+            <div class="invalid-feedback">
+              <ul class="list-unstyled">
+                {% for error in form.module.errors %}
+                <li><strong>{{ error|escape }}</strong></li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% else %}
+            {{ form.module|attr:"aria-describedby:module-help"|add_class:"form-control form-control-lg" }}
+            <p id="module-help" class="form-text text-muted">
+              {{ form.module.help_text }}
+            </p>
+            {% endif %}
+          </div>
+          <div class="text-right">
+            <button type="submit" value="submit_module" class="btn btn-lg btn-primary"> Create module </button>
+            {% if modules %}
+                <button type="submit" value="submit_next" class="btn btn-lg btn-success"> Next step: Arrange modules </button>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </section>
 {% endblock content %}
