--- a/pages/templates/pages/empty.html
+++ b/pages/templates/pages/empty.html
@@ -1,8 +1,13 @@
 {% extends "pages/base.html" %}
-{% load static %}
 {% block content %}
 <section id="empty">
-  <p> nothing here yet</p>
+  <div class="containter">
+    <div class="row">
+      <div class="col">
+        <p> nothing here yet</p>
+      </div>
+    </div>
+  </div>
 </section>
 
 
