--- a/pages/templates/pages/_generalinfo.html
+++ b/pages/templates/pages/_generalinfo.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <section class="generalinfo-display">
   <div class="row align-items-end justify-content-center border border-dark">
@@ -8,11 +9,15 @@
     {% if module.name or module.identity %}
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-sm-1 p-5">
       {% if module.name %}
-        <p class="h1">Hi</p>
-        <p class="lead">I am {{module.name}}</p>
+        <p class="h1">{% trans "Hi," %}</p>
+        <p class="lead">
+          {% blocktrans trimmed with name=module.name %}
+            I am {{name}}.
+          {% endblocktrans %}
+          </p>
       {% endif %}
       {% if module.identity %}
-        <p class="lead">{{ module.get_identity_display }}</p>
+        <p class="lead">{{ module.get_identity_display }}.</p>
       {% endif %}
     </div>
     {% endif %}
