--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col-12">
-        <h2>How it works</h2>
+        <h2>{% trans "How it works" %}</h2>
       </div>
     </div>
     <div class="row">
