--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -28,8 +28,6 @@
         <li class="nav-item">
           <a class="nav-link px-3 btn btn-outline-success" href="{% url "pages:createpage" %}">{%trans "Create one!" context "action button" %}</a>
         </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link px-3" href="{% url "home:how" %}">{% trans "How it works" context "menu item" %}</a>
         </li>
@@ -42,9 +40,27 @@
         <li class="nav-item">
           <a class="nav-link px-3" href="{% url "home:about" %}">{% trans "About" context "menu item" %}</a>
         </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link px-3 disabled" href="#">{% trans "Log in" context "menu item" %}</a>
         </li>
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_language_info for LANGUAGE_CODE as current_language %}
+          {% get_available_languages as LANGUAGES %}
+          {% get_language_info_list for LANGUAGES as languages %}
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{ current_language.name_local}}
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              {% for language in languages %}
+                {% if language.code != LANGUAGE_CODE %}
+                  <a class="dropdown-item" href="{% url 'home:switch_lang' language.code %}?redirect_to={{ request.path }}">{{ language.name_local}}</a>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
       </ul>
     </div>
   </nav>
