--- a/pages/templates/widgets/split_array_list.html
+++ b/pages/templates/widgets/split_array_list.html
@@ -1,3 +1,3 @@
-<ul>
+<ul class="input-list" {% include "django/forms/widgets/attrs.html" %}>
 {% include 'django/forms/widgets/multiwidget.html' %}
 </ul>
