--- a/pages/templates/pages/_freelist.html
+++ b/pages/templates/pages/_freelist.html
@@ -12,7 +12,7 @@
           <div class="card-body">
             <ul>
               {% for item in module.items %}
-              {{item}}
+              <li>{{item}}</li>
               {% endfor %}
             </ul>
           </div>
