--- a/home/templates/home/example1.html
+++ b/home/templates/home/example1.html
@@ -115,7 +115,9 @@
       <div class="row my-2">
         <div class="col-12">
           <h2>{% trans "This is what I want my hair to look like" %}</h2>
-          <div class="card w-50">
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="card">
             <img src="{% static "img/shoulder-length-curly-hairstyle.jpg" %}" class="card-img-top">
             <div class="card-body">
               <p class="card-text">
