--- a/pages/static/css/main.css
+++ b/pages/static/css/main.css
@@ -27,3 +27,15 @@
 .input-list-item input{
   vertical-align:middle;
 }
+
+label {
+  font-weight: 700;
+}
+
+label .form-text{
+  font-weight: normal;
+}
+
+.form-check-label{
+  font-weight: normal;
+}
