--- a/pages/templates/pages/_freepicture.html
+++ b/pages/templates/pages/_freepicture.html
@@ -11,7 +11,7 @@
             <div class="card-body">
               <h3 class="card-title">{{ picture.title }}</h4>
               <p class="card-text">
-                {{ picture.description }}
+                {{ picture.description|linebreaks }}
               </p>
             </div>
           {% endif %}
